# fraud-detection-multi-agent-system

./: .env.prod.example  .gitignore  CLAUDE.md  DASHBOARD_IMPLEMENTATION.md  DOCKER.md  Makefile  README.md  TRANSACTIONS_PAGE_IMPLEMENTATION.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env  .env.development.docker  .env.example  API_IMPLEMENTATION.md  Dockerfile  ENV_SETUP.md  EXTERNAL_THREAT_REFACTORING.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  check_config.py  explore_chromadb.py  main.py  pyproject.toml  pytest.ini  seed_test.py  simple_seed.py  startup.py  view_db.py
backend/alembic/: env.py
backend/alembic/versions/: 685da8fe2597_add_llm_and_rag_trace_fields.py  ac4fa394c551_add_analysis_state_to_transaction_.py
backend/app/: config.py  constants.py  dependencies.py  exceptions.py  main.py
backend/app/agents/: DEBATE_IMPLEMENTATION.md  DECISION_ARBITER_IMPLEMENTATION.md  EXPLAINABILITY_IMPLEMENTATION.md  __init__.py  behavioral_pattern.py  constants.py  debate.py  debate_utils.py  decision_arbiter.py  decision_utils.py  evidence_aggregator.py  explainability.py  external_threat.py  (+5 more)
backend/data/: README.md  fatf_lists.json  synthetic_data.json
backend/examples/: evidence_aggregator_example.py  external_threat_example.py  policy_rag_example.py  transaction_context_example.py
backend/policies/: FP-01.md  FP-02.md  FP-03.md  FP-04.md  FP-05.md  FP-06.md  fraud_policies.md.bak
backend/scripts/: README.md  demo.py  split_policies.py  validate_policies.py  verify_api.py
backend/tests/: TEST_STRUCTURE.md  conftest.py
(+202 files in other folders)
